[gd_scene load_steps=7 format=3 uid="uid://dhtqpe8pcg80v"]

[ext_resource type="Script" path="res://Scripts/Menus/StatsPanel/StatsPanel.gd" id="1_ek2t8"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://Themes/rootTheme.tres" id="2_0j471"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://Themes/titleTextTheme.tres" id="3_r0bwb"]
[ext_resource type="PackedScene" uid="uid://cl2b2giyrbc0i" path="res://Prefabs/UI/Stats/StatLinePanel.tscn" id="4_1k046"]
[ext_resource type="PackedScene" uid="uid://d23cu31e8s3s6" path="res://Prefabs/UI/Stats/EquipmentPanel.tscn" id="5_h5547"]
[ext_resource type="PackedScene" uid="uid://di4m6wwpbc3pl" path="res://Prefabs/UI/Stats/MoveListPanel.tscn" id="6_mask2"]

[node name="StatsPanelNode" type="Node2D"]
script = ExtResource("1_ek2t8")

[node name="StatsPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 960.0
theme = ExtResource("2_0j471")

[node name="Panel" type="Panel" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsTitle" type="RichTextLabel" parent="StatsPanel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 12.0
offset_right = 350.0
offset_bottom = 62.0
grow_horizontal = 2
theme = ExtResource("3_r0bwb")
bbcode_enabled = true
text = "[center]Combatant Name Here - Stats[/center]"
fit_content = true

[node name="StatLinePanel" parent="StatsPanel/Panel" instance=ExtResource("4_1k046")]
layout_mode = 1
offset_left = 40.0
offset_top = 98.0
offset_right = 600.0
offset_bottom = 453.0

[node name="MoveListPanel" parent="StatsPanel/Panel" instance=ExtResource("6_mask2")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -600.0
offset_top = 98.0
offset_right = -40.0
offset_bottom = 453.0
grow_horizontal = 0

[node name="EquipmentPanel" parent="StatsPanel/Panel" instance=ExtResource("5_h5547")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -480.0
offset_right = 600.0
offset_bottom = -125.0
grow_vertical = 0

[node name="BackButton" type="Button" parent="StatsPanel/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -56.0
offset_right = 25.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="StatsPanel/Panel/BackButton" to="." method="_on_back_button_pressed"]
